use pgpDigGetParams() if available

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -162,6 +162,8 @@ IF (ENABLE_RPMDB)
     ENDIF (DB_LIBRARY)
   ENDIF (RPM5 OR FEDORA)
   CHECK_INCLUDE_FILE(rpm/db.h HAVE_RPM_DB_H)
+  INCLUDE (CheckLibraryExists)
+  CHECK_LIBRARY_EXISTS(rpmio pgpDigGetParams "" HAVE_PGPDIGGETPARAMS)
 ENDIF (ENABLE_RPMDB)
 
 INCLUDE (CheckFunctionExists)
@@ -174,7 +176,7 @@ TEST_BIG_ENDIAN (WORDS_BIGENDIAN)
 
 # should create config.h with #cmakedefine instead...
 FOREACH (VAR HAVE_STRCHRNUL HAVE_FOPENCOOKIE HAVE_FUNOPEN WORDS_BIGENDIAN
-  HAVE_RPM_DB_H
+  HAVE_RPM_DB_H HAVE_PGPDIGGETPARAMS
   ENABLE_RPMDB ENABLE_RPMDB_PUBKEY ENABLE_RPMMD ENABLE_SUSEREPO ENABLE_COMPS
   ENABLE_HELIXREPO ENABLE_MDKREPO ENABLE_ARCHREPO ENABLE_DEBIAN
   ENABLE_LZMA_COMPRESSION ENABLE_BZIP2_COMPRESSION)
