dumpsolv: add json output
Add a toggle switch that produces a json file containing all the details
of the solv file(s).

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -144,6 +144,10 @@ PKG_CHECK_MODULES (RPM REQUIRED rpm)
 INCLUDE_DIRECTORIES (${RPM_INCLUDE_DIRS})
 ENDIF (RPM5)
 
+FIND_PACKAGE (PkgConfig REQUIRED)
+PKG_CHECK_MODULES (JANSSON REQUIRED jansson)
+INCLUDE_DIRECTORIES (${JANSSON_INCLUDE_DIRS})
+
 IF (MULTI_SEMANTICS)
 MESSAGE (STATUS "Enabling multi dist support")
 ADD_DEFINITIONS (-DMULTI_SEMANTICS)
