--- a/doc/Makefile.gen
+++ b/doc/Makefile.gen
@@ -1,8 +1,12 @@
 
 man: libsolv.3 libsolv-bindings.3 libsolv-constantids.3 libsolv-history.3
 
-.SUFFIXES: .3 .txt
+html: libsolv.html libsolv-bindings.html libsolv-constantids.html libsolv-history.html
+
+.SUFFIXES: .html .3 .txt
 
 .txt.3:
 	a2x -f manpage $<
 
+.txt.html:
+	a2x -f xhtml $<
