--- a/doc/Makefile.gen
+++ b/doc/Makefile.gen
@@ -1,5 +1,5 @@
 
-man: libsolv.3 libsolv-bindings.3 libsolv-constantids.3 libsolv-history.3
+man: libsolv.3 libsolv-bindings.3 libsolv-constantids.3 libsolv-history.3 libsolv-pool.3
 
 html: libsolv.html libsolv-bindings.html libsolv-constantids.html libsolv-history.html
 
