--- a/package/libsolv.spec.in
+++ b/package/libsolv.spec.in
@@ -99,6 +99,7 @@ Requires:       libsolv-tools = %version
 Requires:       libsolv@LIBSOLV_SOVERSION@ = %version
 %endif
 Requires:       rpm-devel
+Conflicts:      libsatsolver-devel
 
 %description devel
 Development files for libsolv, a new approach to package dependency solving
@@ -108,6 +109,7 @@ Summary:        A new approach to package dependency solving
 Group:          Development/Libraries/C and C++
 Obsoletes:      satsolver-tools < 0.18
 Provides:       satsolver-tools = 0.18
+Conflicts:      satsolver-tools-obsolete
 Requires:       gzip bzip2 coreutils findutils
 
 %description tools
@@ -123,6 +125,7 @@ Requires:       gnupg2
 %if 0%{?suse_version}
 Requires:       gpg2
 %endif
+Conflicts:      libsatsolver-demo
 
 %description demo
 Applications demoing the libsolv library.
