--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -174,13 +174,14 @@ IF (ENABLE_RPMDB)
     ENDIF (RPMMISC_LIBRARY)
   ENDIF (RPM5)
 
-  IF (RPM5 OR FEDORA)
+  # check if rpm contains a bundled berkeley db
+  CHECK_INCLUDE_FILE(rpm/db.h HAVE_RPM_DB_H)
+  IF (NOT HAVE_RPM_DB_H)
     FIND_LIBRARY (DB_LIBRARY NAMES db)
     IF (DB_LIBRARY)
       SET (RPMDB_LIBRARY ${DB_LIBRARY} ${RPMDB_LIBRARY})
     ENDIF (DB_LIBRARY)
-  ENDIF (RPM5 OR FEDORA)
-  CHECK_INCLUDE_FILE(rpm/db.h HAVE_RPM_DB_H)
+  ENDIF (NOT HAVE_RPM_DB_H)
   INCLUDE (CheckLibraryExists)
   CHECK_LIBRARY_EXISTS(rpmio pgpDigGetParams "" HAVE_PGPDIGGETPARAMS)
 ENDIF (ENABLE_RPMDB)
