--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,7 +12,7 @@ OPTION (ENABLE_RUBY "Build the ruby bindings?" OFF)
 OPTION (USE_VENDORDIRS "Install the bindings in vendor directories?" OFF)
 
 OPTION (ENABLE_RPMDB "Build with rpm database support?" OFF)
-OPTION (ENABLE_RPMDB_PUBKEY "Build with rpmdb pubkey support?" OFF)
+OPTION (ENABLE_PUBKEY "Build with pubkey support?" OFF)
 OPTION (ENABLE_RPMDB_BYRPMHEADER "Build with rpmdb Header support?" OFF)
 OPTION (ENABLE_RPMMD "Build with rpmmd repository support?" OFF)
 OPTION (ENABLE_SUSEREPO "Build with suse repository support?" OFF)
@@ -83,7 +83,7 @@ IF (SUSE)
 MESSAGE (STATUS "Building for SUSE")
 ADD_DEFINITIONS (-DSUSE)
 SET (ENABLE_RPMDB ON)
-SET (ENABLE_RPMDB_PUBKEY ON)
+SET (ENABLE_PUBKEY ON)
 SET (ENABLE_RPMDB_BYRPMHEADER ON)
 SET (ENABLE_RPMMD ON)
 SET (ENABLE_SUSEREPO ON)
@@ -186,9 +186,9 @@ IF (ENABLE_RPMDB)
   CHECK_LIBRARY_EXISTS(rpmio pgpDigGetParams "" HAVE_PGPDIGGETPARAMS)
 ENDIF (ENABLE_RPMDB)
 
-IF (ENABLE_RPMDB_PUBKEY)
+IF (ENABLE_PUBKEY)
   SET (ENABLE_PGPVRFY ON)
-ENDIF (ENABLE_RPMDB_PUBKEY)
+ENDIF (ENABLE_PUBKEY)
 
 INCLUDE (CheckFunctionExists)
 INCLUDE (TestBigEndian)
@@ -201,7 +201,7 @@ TEST_BIG_ENDIAN (WORDS_BIGENDIAN)
 # should create config.h with #cmakedefine instead...
 FOREACH (VAR HAVE_STRCHRNUL HAVE_FOPENCOOKIE HAVE_FUNOPEN WORDS_BIGENDIAN
   HAVE_RPM_DB_H HAVE_PGPDIGGETPARAMS
-  ENABLE_RPMDB ENABLE_RPMDB_PUBKEY ENABLE_RPMMD ENABLE_SUSEREPO ENABLE_COMPS
+  ENABLE_RPMDB ENABLE_PUBKEY ENABLE_RPMMD ENABLE_SUSEREPO ENABLE_COMPS
   ENABLE_HELIXREPO ENABLE_MDKREPO ENABLE_ARCHREPO ENABLE_DEBIAN ENABLE_HAIKU
   ENABLE_LZMA_COMPRESSION ENABLE_BZIP2_COMPRESSION ENABLE_PGPVRFY)
   IF(${VAR})
