fix for old swig versions

--- a/bindings/python/CMakeLists.txt
+++ b/bindings/python/CMakeLists.txt
@@ -5,6 +5,9 @@ SET (PythonInterp_FIND_VERSION ${PYTHONLIBS_VERSION_STRING})
 FIND_PACKAGE (PythonInterp REQUIRED)
 EXECUTE_PROCESS(COMMAND ${PYTHON_EXECUTABLE} -c "from sys import stdout; from distutils import sysconfig; stdout.write(sysconfig.get_python_lib(True))" OUTPUT_VARIABLE PYTHON_INSTALL_DIR)
 
+IF (NOT DEFINED PYTHON_VERSION_MAJOR)
+    SET (PYTHON_VERSION_MAJOR 2)
+ENDIF (NOT DEFINED PYTHON_VERSION_MAJOR)
 IF (${PYTHON_VERSION_MAJOR} GREATER 2)
     SET (SWIG_PY_FLAGS -DPYTHON3=1)
 ENDIF (${PYTHON_VERSION_MAJOR} GREATER 2)
