fix Pool_repo_iterator and Repo_solvable_iterator in perl bindings
A perliter() call was missing.

--- a/bindings/CMakeLists.txt
+++ b/bindings/CMakeLists.txt
@@ -6,8 +6,15 @@ MESSAGE (STATUS "Found SWIG version ${SWIG_VERSION}")
 SET (SWIG_INPUT "${CMAKE_CURRENT_SOURCE_DIR}/solv.i")
 
 IF (ENABLE_PYTHON)
+    IF (ENABLE_PYTHON3)
+        # build for both python and python3
+        SET (PythonLibs_FIND_VERSION 2)
+    ENDIF (ENABLE_PYTHON3)
     ADD_SUBDIRECTORY (python)
 ENDIF (ENABLE_PYTHON)
+IF (ENABLE_PYTHON3)
+    ADD_SUBDIRECTORY (python3)
+ENDIF (ENABLE_PYTHON3)
 IF (ENABLE_PERL)
     ADD_SUBDIRECTORY (perl)
 ENDIF (ENABLE_PERL)
