--- a/doc/Makefile.gen
+++ b/doc/Makefile.gen
@@ -1,9 +1,13 @@
 
-man: libsolv.3 libsolv-bindings.3 libsolv-constantids.3 libsolv-history.3 libsolv-pool.3
+man: libsolv.3 libsolv-bindings.3 libsolv-constantids.3 libsolv-history.3 libsolv-pool.3 \
+	mergesolv.1 dumpsolv.1 installcheck.1 testsolv.1
 
 html: libsolv.html libsolv-bindings.html libsolv-constantids.html libsolv-history.html libsolv-pool.html
 
-.SUFFIXES: .html .3 .txt
+.SUFFIXES: .html .3 .1 .txt
+
+.txt.1:
+	a2x -f manpage $<
 
 .txt.3:
 	a2x -f manpage $<
