--- a/doc/Makefile.gen
+++ b/doc/Makefile.gen
@@ -1,6 +1,10 @@
 
-man: libsolv.3 libsolv-bindings.3 libsolv-constantids.3 libsolv-history.3 libsolv-pool.3 \
-	mergesolv.1 dumpsolv.1 installcheck.1 testsolv.1
+man: man3 man1
+
+man3: libsolv.3 libsolv-bindings.3 libsolv-constantids.3 libsolv-history.3 libsolv-pool.3
+
+man1: mergesolv.1 dumpsolv.1 installcheck.1 testsolv.1 rpmdb2solv.1 rpms2solv.1 \
+      rpmmd2solv.1 repomdxml2solv.1
 
 html: libsolv.html libsolv-bindings.html libsolv-constantids.html libsolv-history.html libsolv-pool.html
 
