--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -240,7 +240,7 @@ SET (CPACK_TOPLEVEL_TAG "Linux-Source:")
 
 # DEBIANIZATION 
 SET (CPACK_GENERATOR "DEB")
-SET (CPACK_PACKAGE_FILE_NAME "libsolv-${VERSION}")
+SET (CPACK_PACKAGE_FILE_NAME "libsolv_${VERSION}")
 SET (CPACK_DEBIAN_PACKAGE_MAINTAINER "IPONWEB Packaging <noc@iponweb.net>")
 SET (CPACK_DEBIAN_PACKAGE_CONTROL_EXTRA "${CMAKE_CURRENT_SOURCE_DIR}/debian/postinst;${CMAKE_CURRENT_SOURCE_DIR}/debian/postrm")
 
