Fix linker checks

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -206,16 +206,21 @@ CHECK_FUNCTION_EXISTS (fopencookie HAVE_FOPENCOOKIE)
 CHECK_FUNCTION_EXISTS (funopen HAVE_FUNOPEN)
 TEST_BIG_ENDIAN (WORDS_BIGENDIAN)
 
+IF (${CMAKE_MAJOR_VERSION} GREATER 2)
 INCLUDE (CMakePushCheckState)
 INCLUDE (CheckCCompilerFlag)
 MACRO (check_linker_flag FLAG VAR)
-	cmake_push_check_state(RESET)
-	set(CMAKE_REQUIRED_FLAGS "${FLAG}")
-	check_c_compiler_flag("" "${VAR}")
-	cmake_pop_check_state()
+	CMAKE_PUSH_CHECK_STATE (RESET)
+	SET (CMAKE_REQUIRED_FLAGS "${FLAG}")
+	CHECK_C_COMPILER_FLAG ("" "${VAR}")
+	CMAKE_POP_CHECK_STATE ()
 ENDMACRO (check_linker_flag)
-check_linker_flag("-Wl,--as-needed" HAS_LINKER_AS_NEEDED)
-check_linker_flag("-Wl,--version-script=${CMAKE_SOURCE_DIR}/src/libsolv.ver" HAS_LINKER_VERSION_SCRIPT)
+check_linker_flag("-Wl,--as-needed" HAVE_LINKER_AS_NEEDED)
+check_linker_flag("-Wl,--version-script=${CMAKE_SOURCE_DIR}/src/libsolv.ver" HAVE_LINKER_VERSION_SCRIPT)
+ELSE (${CMAKE_MAJOR_VERSION} GREATER 2)
+SET (HAVE_LINKER_AS_NEEDED 1)
+SET (HAVE_LINKER_VERSION_SCRIPT 1)
+ENDIF (${CMAKE_MAJOR_VERSION} GREATER 2)
 
 # should create config.h with #cmakedefine instead...
 FOREACH (VAR HAVE_STRCHRNUL HAVE_FOPENCOOKIE HAVE_FUNOPEN WORDS_BIGENDIAN
@@ -318,9 +323,9 @@ ENDIF (ENABLE_RPMDB)
 IF (ENABLE_HAIKU)
 SET (SYSTEM_LIBRARIES ${HAIKU_SYSTEM_LIBRARIES} ${SYSTEM_LIBRARIES})
 ENDIF (ENABLE_HAIKU)
-IF (HAS_LINKER_AS_NEEDED)
+IF (HAVE_LINKER_AS_NEEDED)
 SET (SYSTEM_LIBRARIES "-Wl,--as-needed" ${SYSTEM_LIBRARIES})
-ENDIF (HAS_LINKER_AS_NEEDED)
+ENDIF (HAVE_LINKER_AS_NEEDED)
 
 ADD_SUBDIRECTORY (src)
 ADD_SUBDIRECTORY (ext)
