Enable the comps parser for SUSE
This is to allow kiwi to deal with comps groups.

--- a/package/libsolv.spec.in
+++ b/package/libsolv.spec.in
@@ -166,7 +166,7 @@ CMAKE_FLAGS=
 CMAKE_FLAGS="-DFEDORA=1"
 %endif
 %if 0%{?suse_version}
-CMAKE_FLAGS="-DSUSE=1 -DENABLE_APPDATA=1"
+CMAKE_FLAGS="-DSUSE=1 -DENABLE_APPDATA=1 -DENABLE_COMPS=1"
 %endif
 
 cmake   $CMAKE_FLAGS \
