--- a/package/libsolv.spec.in
+++ b/package/libsolv.spec.in
@@ -34,7 +34,7 @@ BuildRoot:      %{_tmppath}/%{name}-%{version}-build
 BuildRequires:  libneon0.26-devel
 %endif
 %if 0%{?fedora_version} || 0%{?rhel_version} >= 600 || 0%{?centos_version} >= 600
-BuildRequires:  db4-devel
+BuildRequires:  db-devel
 %endif
 %if 0%{?suse_version}
 %if 0%{?suse_version} < 1030
