support MAGEIA as build target

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -111,12 +111,21 @@ SET (have_system ${have_system}x)
 ENDIF (ARCHLINUX)
 
 IF (MANDRIVA)
-MESSAGE (STATUS "Building for Mandriva/Mageia")
+MESSAGE (STATUS "Building for Mandriva")
 ADD_DEFINITIONS (-DMANDRIVA)
 SET (ENABLE_MDKREPO ON)
 SET (ENABLE_RPMDB ON)
 SET (have_system ${have_system}x)
 ENDIF (MANDRIVA)
+
+IF (MAGEIA)
+MESSAGE (STATUS "Building for Mageia")
+ADD_DEFINITIONS (-DMAGEIA)
+SET (ENABLE_MDKREPO ON)
+SET (ENABLE_RPMDB ON)
+SET (ENABLE_LZMA_COMPRESSION ON)
+SET (have_system ${have_system}x)
+ENDIF (MAGEIA)
 
 IF (HAIKU)
 MESSAGE(STATUS "Building for Haiku")
