Add RPM-MD repodata support with Mageia

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -123,6 +123,7 @@ MESSAGE (STATUS "Building for Mageia")
 ADD_DEFINITIONS (-DMAGEIA)
 SET (ENABLE_MDKREPO ON)
 SET (ENABLE_RPMDB ON)
+SET (ENABLE_RPMMD ON)
 SET (ENABLE_LZMA_COMPRESSION ON)
 SET (have_system ${have_system}x)
 ENDIF (MAGEIA)
