--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,7 +44,9 @@ IF (DEFINED LIB)
   SET (LIB_INSTALL_DIR "${CMAKE_INSTALL_PREFIX}/${LIB}")
 ELSE (DEFINED  LIB)
   IF (CMAKE_SIZEOF_VOID_P MATCHES "8")
-    SET (LIB_SUFFIX "64")
+    IF (NOT LIB_SUFFIX)
+      SET (LIB_SUFFIX "64")
+    ENDIF (NOT LIB_SUFFIX)
   ENDIF (CMAKE_SIZEOF_VOID_P MATCHES "8")
   SET (LIB_INSTALL_DIR "${CMAKE_INSTALL_PREFIX}/lib${LIB_SUFFIX}")
 ENDIF (DEFINED  LIB)
