CMakeLists.txt: fix MAN_INSTALL_DIR
It checks ${CMAKE_INSTALL_PREFIX}/share/man when configure, but it may
not exist when crosscompile, for example, when CMAKE_INSTALL_PREFIX="/",
it is OK, but when CMAKE_INSTALL_PREFIX="/some/path/else", then it
doesn't exist, and the man dir would be set to "/usr/man" which is
incorrect.

Signed-off-by: Robert Yang liezhi.yang@windriver.com
Signed-off-by: Maxin B. John <maxin.john@intel.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -57,10 +57,10 @@ else (DEFINED INCLUDE)
 ENDIF (DEFINED  INCLUDE)
 MESSAGE (STATUS "Header files will be installed in ${INCLUDE_INSTALL_DIR}")
 SET (BIN_INSTALL_DIR "${CMAKE_INSTALL_PREFIX}/bin")
-SET (MAN_INSTALL_DIR "${CMAKE_INSTALL_PREFIX}/man")
-IF (IS_DIRECTORY "${CMAKE_INSTALL_PREFIX}/share/man"  AND NOT IS_DIRECTORY "${CMAKE_INSTALL_PREFIX}/man")
-  SET (MAN_INSTALL_DIR "${CMAKE_INSTALL_PREFIX}/share/man")
-ENDIF (IS_DIRECTORY "${CMAKE_INSTALL_PREFIX}/share/man"  AND NOT IS_DIRECTORY "${CMAKE_INSTALL_PREFIX}/man")
+SET (MAN_INSTALL_DIR "${CMAKE_INSTALL_PREFIX}/share/man")
+IF (IS_DIRECTORY "${CMAKE_INSTALL_PREFIX}/man"  AND NOT IS_DIRECTORY "${CMAKE_INSTALL_PREFIX}/share/man")
+  SET (MAN_INSTALL_DIR "${CMAKE_INSTALL_PREFIX}/man")
+ENDIF (IS_DIRECTORY "${CMAKE_INSTALL_PREFIX}/man"  AND NOT IS_DIRECTORY "${CMAKE_INSTALL_PREFIX}/share/man")
 MESSAGE(STATUS "Man pages will be installed in ${MAN_INSTALL_DIR}")
 
 ####################################################################
