Add enabled features to solvversion.h

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -172,7 +172,6 @@ ENDIF (RPM5)
 
 IF (MULTI_SEMANTICS)
 MESSAGE (STATUS "Enabling multi dist support")
-ADD_DEFINITIONS (-DMULTI_SEMANTICS)
 ENDIF (MULTI_SEMANTICS)
 
 INCLUDE (CheckIncludeFile)
@@ -237,14 +236,32 @@ ENDIF (${CMAKE_MAJOR_VERSION} GREATER 2)
 
 # should create config.h with #cmakedefine instead...
 FOREACH (VAR HAVE_STRCHRNUL HAVE_FOPENCOOKIE HAVE_FUNOPEN WORDS_BIGENDIAN
-  HAVE_RPM_DB_H HAVE_PGPDIGGETPARAMS
-  ENABLE_RPMDB ENABLE_PUBKEY ENABLE_RPMMD ENABLE_RPMDB_BYRPMHEADER ENABLE_SUSEREPO ENABLE_COMPS
-  ENABLE_HELIXREPO ENABLE_MDKREPO ENABLE_ARCHREPO ENABLE_DEBIAN ENABLE_HAIKU
-  ENABLE_LZMA_COMPRESSION ENABLE_BZIP2_COMPRESSION ENABLE_PGPVRFY ENABLE_APPDATA
-  ENABLE_LINKED_PKGS ENABLE_COMPLEX_DEPS)
+  HAVE_RPM_DB_H HAVE_PGPDIGGETPARAMS)
   IF(${VAR})
     ADD_DEFINITIONS (-D${VAR}=1)
     SET (SWIG_FLAGS ${SWIG_FLAGS} -D${VAR})
+  ENDIF (${VAR})
+ENDFOREACH (VAR)
+
+FOREACH (VAR
+  ENABLE_LINKED_PKGS ENABLE_COMPLEX_DEPS MULTI_SEMANTICS)
+  IF(${VAR})
+    ADD_DEFINITIONS (-D${VAR}=1)
+    SET (SWIG_FLAGS ${SWIG_FLAGS} -D${VAR})
+    STRING(REPLACE ENABLE_ "" VARX ${VAR})
+    SET (LIBSOLV_FEATURE_${VARX} 1)
+  ENDIF (${VAR})
+ENDFOREACH (VAR)
+
+FOREACH (VAR
+  ENABLE_RPMDB ENABLE_PUBKEY ENABLE_RPMMD ENABLE_RPMDB_BYRPMHEADER ENABLE_SUSEREPO ENABLE_COMPS
+  ENABLE_HELIXREPO ENABLE_MDKREPO ENABLE_ARCHREPO ENABLE_DEBIAN ENABLE_HAIKU
+  ENABLE_LZMA_COMPRESSION ENABLE_BZIP2_COMPRESSION ENABLE_PGPVRFY ENABLE_APPDATA)
+  IF(${VAR})
+    ADD_DEFINITIONS (-D${VAR}=1)
+    SET (SWIG_FLAGS ${SWIG_FLAGS} -D${VAR})
+    STRING(REPLACE ENABLE_ "" VARX ${VAR})
+    SET (LIBSOLVEXT_FEATURE_${VARX} 1)
   ENDIF (${VAR})
 ENDFOREACH (VAR)
 
