--- a/src/solvversion.h.in
+++ b/src/solvversion.h.in
@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2007, Novell Inc.
+ * Copyright (c) 2016, SUSE LLC
  *
  * This program is licensed under the BSD license, read LICENSE.BSD
  * for further information
