--- a/package/libsolv.spec.in
+++ b/package/libsolv.spec.in
@@ -26,6 +26,7 @@ BuildRoot:      %{_tmppath}/%{name}-%{version}-build
 %bcond_without disable_shared
 %bcond_without perl_binding
 %bcond_without python_binding
+%bcond_with    python3_binding
 %bcond_without ruby_binding
 %bcond_with zypp
 
@@ -73,6 +74,10 @@ BuildRequires:  swig
 %global python_sitearch %(python -c "from distutils.sysconfig import get_python_lib; print get_python_lib(True);")
 BuildRequires:  python-devel
 BuildRequires:  swig
+%endif
+%if %{with python3_binding}
+%global python3_sitearch %(python3 -c "from distutils.sysconfig import get_python_lib; print get_python_lib(True);")
+BuildRequires:  python3-devel
 %endif
 
 Summary:        A new approach to package dependency solving
@@ -146,6 +151,13 @@ Group:          Development/Languages/Python
 %description -n python-solv
 Python bindings for sat solver.
 
+%package -n python3-solv
+Summary:        Python3 bindings for the libsolv library
+Group:          Development/Languages/Python
+
+%description -n python3-solv
+Python3 bindings for sat solver.
+
 %package -n perl-solv
 Requires:       perl = %{perl_version}
 Summary:        Perl bindings for the libsolv library
@@ -162,6 +174,7 @@ export CFLAGS="$RPM_OPT_FLAGS"
 export CXXFLAGS="$CFLAGS"
 
 CMAKE_FLAGS=
+PYTHON_CMAKE_FLAGS=
 %if 0%{?fedora_version} || 0%{?rhel_version} >= 600 || 0%{?centos_version} >= 600
 CMAKE_FLAGS="-DFEDORA=1"
 %endif
@@ -169,7 +182,13 @@ CMAKE_FLAGS="-DFEDORA=1"
 CMAKE_FLAGS="-DSUSE=1 -DENABLE_APPDATA=1 -DENABLE_COMPS=1"
 %endif
 
-cmake   $CMAKE_FLAGS \
+%if %{with python3_binding}
+for pyversion in 3 2 ; do
+test $pyversion == 2 && perl -i -p -e 's/(python)/${1}3/i' CMakeCache.txt
+PYTHON_CMAKE_FLAGS="-DPythonLibs_FIND_VERSION=$pyversion -DPythonLibs_FIND_VERSION_MAJOR=$pyversion"
+%endif
+
+cmake	$CMAKE_FLAGS $PYTHON_CMAKE_FLAGS \
 	-DCMAKE_INSTALL_PREFIX=%{_prefix} \
 	-DLIB=%{_lib} \
 	-DCMAKE_VERBOSE_MAKEFILE=TRUE \
@@ -182,16 +201,24 @@ cmake   $CMAKE_FLAGS \
 	%{?with_zypp:-DENABLE_SUSEREPO=1 -DENABLE_HELIXREPO=1} \
 	-DUSE_VENDORDIRS=1 \
 	-DCMAKE_SKIP_RPATH=1
+
+%if %{with python3_binding}
+done
+%endif
+
 make %{?jobs:-j %jobs}
 
 %install
 make DESTDIR=$RPM_BUILD_ROOT install
-%if %{with python_binding}
 %if 0%{?suse_version}
+%if %{with python_binding}
 pushd $RPM_BUILD_ROOT/%{python_sitearch}
 python %py_libdir/py_compile.py *.py
 python -O %py_libdir/py_compile.py *.py
 popd
+%endif
+%if %{with python3_binding}
+%py3_compile $RPM_BUILD_ROOT/%{python3_sitearch}
 %endif
 %endif
 %if %{with disable_shared}
@@ -263,6 +290,12 @@ rm -rf "$RPM_BUILD_ROOT"
 %files -n python-solv
 %defattr(-,root,root)
 %{python_sitearch}/*
+%endif
+
+%if %{with python3_binding}
+%files -n python3-solv
+%defattr(-,root,root)
+%{python3_sitearch}/*
 %endif
 
 %changelog
